# extension-sorter

./: Cargo.toml  README.md
src/: main.rs
