[package]
name = "extension-sorter"
description = "A tool to classify files by file extension."
authors = ["Daiki Nakashima <daiki48.engineer@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
