[package]
name = "extension-sorter"
description = "A tool to classify files by file extension."
repository = "https://github.com/Daiki48/extension-sorter"
authors = ["Daiki Nakashima <daiki48.engineer@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
version = "0.1.1"
edition = "2021"

[dependencies]
